依頼するメリット、背景、GSAP

--- a/index.html
+++ b/index.html
@@ -113,8 +113,31 @@
 
 
 
-<div class="advantages inner">
-    .advantages__
+<div class="advantages main-inner">
+    <div class="advantages__container">
+        <h2 class="advantages__title">依頼するメリット</h2>
+
+        <div class="advantages__items">
+        <div class="advantages__item">
+            <div class="advantages__item-title">不許可リスクの軽減</div>
+            <div class="advantages__text">
+              依頼するメリットの内容入ります。依頼するメリットの内容入ります。 依頼するメリットの内容入ります。依頼するメリットの内容入ります。依頼するメリットの内容入ります。依頼するメリットの内容入ります。 依頼するメリットの内容入ります。依頼するメリットの内容入ります。依頼するメリットの内容入ります。依頼するメリットの内容入ります。
+            </div>
+        </div><!--advantages__item-->
+        <div class="advantages__item">
+            <div class="advantages__item-title">面倒な書類作成を任せられる</div>
+            <div class="advantages__text">
+             依頼するメリットの内容入ります。依頼するメリットの内容入ります。 依頼するメリットの内容入ります。依頼するメリットの内容入ります。依頼するメリットの内容入ります。依頼するメリットの内容入ります。 依頼するメリットの内容入ります。依頼するメリットの内容入ります。依頼するメリットの内容入ります。依頼するメリットの内容入ります。
+            </div>
+        </div><!--advantages__item-->
+        <div class="advantages__item">
+            <div class="advantages__item-title">入国管理局へ出向く必要がない</div>
+            <div class="advantages__text">
+              依頼するメリットの内容入ります。依頼するメリットの内容入ります。依頼するメリットの内容入ります。 依頼するメリットの内容入ります。依頼するメリットの内容入ります。依頼するメリットの内容入ります。依頼するメリットの内容入ります。
+            </div>
+        </div><!--advantages__item-->
+    </div><!--advantages__items-->
+    </div>
 </div>
 </div>
 
@@ -125,110 +148,19 @@
 
 
 
-<!--<div class="duties">
-    <div class="duties__title">業務案内</div>
-
-    <div class="duties__items">
-
-
-        <div class="duties__item">
-            <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
-            <div class="duties__text">
-            <div class="duties__item-title">在留資格の変更</div>
-            <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
-            </div>
-        </div>
-        <div class="duties__item">
-            <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
-            <div class="duties__text">
-            <div class="duties__item-title">在留期間の更新</div>
-            <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
-            </div>
-        </div>
-        <div class="duties__item">
-            <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
-            <div class="duties__text">
-            <div class="duties__item-title">在留資格認定証明書交付申請</div>
-            <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
-            </div>
-        </div>
-        <div class="duties__item">
-            <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
-            <div class="duties__text">
-            <div class="duties__item-title">永住許可申請</div>
-            <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
-            </div>
-        </div>
-        <div class="duties__item">
-            <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
-            <div class="duties__text">
-            <div class="duties__item-title">帰化申請</div>
-            <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
-            </div>
-        </div>
-        <div class="duties__item">
-            <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
-            <div class="duties__text">
-            <div class="duties__item-title">短期滞在（親族訪問等）</div>
-            <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
-            </div>
-        </div>
-        <div class="duties__item">
-            <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
-            <div class="duties__text">
-            <div class="duties__item-title">協同組合設立サポート</div>
-            <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
-            </div>
-        </div>
-        <div class="duties__item">
-            <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
-            <div class="duties__text">
-            <div class="duties__item-title">日本語学校設立サポート</div>
-            <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
-            </div>
-        </div>
-        <div class="duties__item">
-            <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
-            <div class="duties__text">
-            <div class="duties__item-title">短期滞在（親族訪問等）</div>
-            <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
-            </div>
-        </div>
 
 
 
-
-    </div><!--duties__items-->
-<!--</div><!--duties-->
-
-
-
-
-
-
-
-
-<!--<h1 class="title">GSAP Pinning Side Scroll</h1>
-<section class="normal section">
-  <div class="container">
-    <h2 class="normal-heading heading">普通のセクション</h2>
-    <p class="normal-text">
-      テキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよ
-    </p>
-  </div>
-</section>-->
 
 <section class="side-scroll section inner">
   <div class="side-scroll-container container">
-    <!--<h2 class="side-scroll-heading heading">
-      横にスクロールするセクション
-    </h2>-->
+
     <div class="duties">
-        <div class="duties__title">業務案内</div>
+        <h2 class="duties__title">業務案内</h2>
     <div class="side-scroll-list-wrapper">
       <div class="side-scroll-list duties__items">
         <div class="side-scroll-item duties__item">
-            <h2 class="duties__title-a">Application for<br> Permanent Residence Permit</h2>
+            <p class="duties__title-a">Application for<br> Permanent Residence Permit</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
             <div class="duties__item-title">永住許可申請</div>
@@ -236,7 +168,7 @@
             </div>
         </div>
         <div class="side-scroll-item duties__item">
-            <h2 class="duties__title-a">Change of status of residence</h2>
+            <p class="duties__title-a">Change of status of residence</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
             <div class="duties__item-title">在留資格の変更</div>
@@ -244,7 +176,7 @@
             </div>
         </div>
         <div class="side-scroll-item duties__item">
-            <h2 class="duties__title-a">Renewal of Period of Stay<br> Permanent Residence Permit</h2>
+            <p class="duties__title-a">Renewal of Period of Stay<br> Permanent Residence Permit</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
             <div class="duties__item-title">在留期間の更新</div>
@@ -252,7 +184,7 @@
             </div>
         </div>
         <div class="side-scroll-item duties__item">
-            <h2 class="duties__title-a">Application for<br> Certificate of Eligibility</h2>
+            <p class="duties__title-a">Application for<br> Certificate of Eligibility</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
             <div class="duties__item-title">在留資格認定証明書交付申請</div>
@@ -260,7 +192,7 @@
             </div>
         </div>
         <div class="side-scroll-item duties__item">
-            <h2 class="duties__title-a">Application for naturalization</h2>
+            <p class="duties__title-a">Application for naturalization</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
             <div class="duties__item-title">帰化申請</div>
@@ -268,7 +200,7 @@
             </div>
         </div>
         <div class="side-scroll-item duties__item">
-            <h2 class="duties__title-a">Short stay</h2>
+            <p class="duties__title-a">Short stay</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
             <div class="duties__item-title">短期滞在（親族訪問等）</div>
@@ -276,7 +208,7 @@
             </div>
         </div>
         <div class="side-scroll-item duties__item">
-            <h2 class="duties__title-a">Support for<br> Cooperative Establishment</h2>
+            <p class="duties__title-a">Support for<br> Cooperative Establishment</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
             <div class="duties__item-title">協同組合設立サポート</div>
@@ -284,7 +216,7 @@
             </div>
         </div>
         <div class="side-scroll-item duties__item">
-            <h2 class="duties__title-a">Support for Establishment<br> of Japanese Language Schools</h2>
+            <p class="duties__title-a">Support for Establishment<br> of Japanese Language Schools</p>
                 <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
             <div class="duties__item-title">日本語学校設立サポート</div>
@@ -298,19 +230,6 @@
   </div><!--side-scroll-container container-->
 </section>
 
-<!--<section class="normal section">
-  <div class="container">
-    <h2 class="normal-heading heading">普通のセクション</h2>
-    <p class="normal-text">
-      テキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよテキストが入りますよ
-    </p>
-  </div>
-</section>-->
-
-
-
-
-
 
 
 
@@ -320,7 +239,7 @@
 
 
 <div class="gp inner">
-    <div class="gp__title">選ばれる理由</div>
+    <h2 class="gp__title">選ばれる理由</h2>
     <ul class="gp__items">
         <li class="gp__item">
             <div class="gp__box-a">
@@ -362,7 +281,7 @@
 <div class="flow inner">
     <div class="flow__box"><!--縦書き-->
         <div class="flow__filter">
-        <div class="flow__title">サービスの流れ</div>
+        <h2 class="flow__title">サービスの流れ</h2>
         <ul class="flow__items">
             <li class="flow__item">
                 <div class="flow__border">
@@ -413,7 +332,7 @@
 
 
 <div class="question">
-    <div class="question__title">よくある質問</div><!--ホバーによってパラパラさせる-->
+    <h2 class="question__title">よくある質問</h2><!--ホバーによってパラパラさせる-->
     <ul>
         <li></li>
         <li></li>
@@ -427,7 +346,7 @@
 
         <div class="representative inner">
             <div class="representative__title">
-                <p>ごあいさつ</p>
+                <h2>ごあいさつ</h2>
             </div>
             <div class="representative__container">
             <div class="representative__left">
@@ -444,7 +363,7 @@
 
 
         <div class="access inner">
-                <div class="access__title">アクセス</div>
+                <h2 class="access__title">アクセス</h2>
                 <div class="access__box">
                     <div class="access__left">
                     <div class="access__map">
@@ -462,6 +381,10 @@
                     <div class="access__time-left">営業時間</div>
                     <div class="access__time-right">09:30～19:30</div>
                 </div>
+
+                <div class="access__map-btn">
+                    <a href="/">アプリの地図でみる</a>
+                </div>
             </div><!--access__right-->
         </div><!--access__box-->
         </div><!--access-->
@@ -474,7 +397,7 @@
 
 <div class="inquiry">
     <div class="inquiry__filter">
-    <div class="inquiry__title">お問い合わせはこちら</div>
+    <h2 class="inquiry__title">お問い合わせはこちら</h2>
     <p class="text">Please feel free to ask!</p>
     <div class="inquiry__box">
     <div class="inquiry__tel">
