よくあるご相談追加

--- a/index.html
+++ b/index.html
@@ -331,16 +331,51 @@
 
 
 
-<div class="question">
-    <h2 class="question__title">よくある質問</h2><!--ホバーによってパラパラさせる-->
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-</div>
+<div class="question inner">
+    <h2 class="question__title">よくあるご相談</h2><!--ホバーによってパラパラさせる-->
+    <div class="question__box">
+        <div class="question__item question__lemon">
+        <div class="question__contents">
+        <div class="question__Q">外国人を採用したいけど手続きがわからない。</div>
+        <p class="question__text">外国人雇用の際には、担当職種など細かな決まりがあり、書類の書き方にもポイントがあります。
+            安易な自己申請で失敗し、せっかく就職が内定した外国人の人生を左右してしまうこともあります。
+            ぜひ外国人就職支援の専門家にご相談ください。</p>
+        </div>
+        </div>
+        <div class="question__item question__powder">
+        <div class="question__contents">
+        <div class="question__Q">自分で申請して不許可になってしまった。</div>
+        <p class="question__text">自己申請で失敗してしまって、帰国しなければならない・・・
+            あきらめる前にぜひ入管手続きの専門家にご相談ください。
+            不許可理由を探り、再申請に向けサポートいたします。</p>
+        </div>
+        </div>
+        <div class="question__item question__peach">
+        <div class="question__contents question__contents-long">
+        <div class="question__Q">自分が帰化や永住の要件を満たしているかわからない。</div>
+        <p class="question__text">よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。</p>
+        </div>
+        </div>
+        <div class="question__item question__warm">
+        <div class="question__contents">
+        <div class="question__Q">他の事務所では断わられたが本当にムリですか？</div>
+        <p class="question__text">よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。</p>
+        </div>
+        </div>
+        <div class="question__item question__lemon">
+        <div class="question__contents">
+        <div class="question__Q">追加資料が多くてもうお手上げです。</div>
+        <p class="question__text">よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。</p>
+        </div>
+        </div>
+        <div class="question__item question__powder">
+        <div class="question__contents">
+        <div class="question__Q">不許可になったが理由がよく分からない！</div>
+        <p class="question__text">よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。よくあるご相談テキスト入ります。</p>
+       </div>
+       </div>
+    </div><!--question__box-->
+</div><!--question-->
 
 
 
@@ -451,7 +486,7 @@
 
 
 
-
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>-->
 <script src="/js/script.js"></script>
 
 </body>
