横スライド調整

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
 <link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>-->
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Great+Vibes&family=Italianno&family=Josefin+Sans:wght@100;300&family=Meddon&family=Monsieur+La+Doulaise&family=Sacramento&family=Style+Script&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -149,25 +149,24 @@
 
 
 
+  <section class="side-scroll__section common__section">
+    <div class="common__container">
+      <div class="side-scroll__itemOuter">
+        <div class="side-scroll__itemInner">
 
+            <div class="side-scroll__item duties__title-box">
+                <h2 class="duties__title">業務案内</h2>
+            </div>
 
-
-<section class="side-scroll section inner">
-  <div class="side-scroll-container container">
-
-    <div class="duties">
-        <h2 class="duties__title">業務案内</h2>
-    <div class="side-scroll-list-wrapper">
-      <div class="side-scroll-list duties__items">
-        <div class="side-scroll-item duties__item">
-            <p class="duties__title-a">Application for<br> Permanent Residence Permit</p>
+          <div class="side-scroll__item duties__item">
+            <p class="duties__title-a">Application for Permanent Residence Permit</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
             <div class="duties__item-title">永住許可申請</div>
             <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
             </div>
         </div>
-        <div class="side-scroll-item duties__item">
+        <div class="side-scroll__item duties__item">
             <p class="duties__title-a">Change of status of residence</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
@@ -175,23 +174,23 @@
             <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
             </div>
         </div>
-        <div class="side-scroll-item duties__item">
-            <p class="duties__title-a">Renewal of Period of Stay<br> Permanent Residence Permit</p>
+        <div class="side-scroll__item duties__item">
+            <p class="duties__title-a">Renewal of Period of Stay Permanent Residence Permit</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
             <div class="duties__item-title">在留期間の更新</div>
             <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
             </div>
         </div>
-        <div class="side-scroll-item duties__item">
-            <p class="duties__title-a">Application for<br> Certificate of Eligibility</p>
+        <div class="side-scroll__item duties__item">
+            <p class="duties__title-a">Application for Certificate of Eligibility</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
             <div class="duties__item-title">在留資格認定証明書交付申請</div>
             <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
             </div>
         </div>
-        <div class="side-scroll-item duties__item">
+        <div class="side-scroll__item duties__item">
             <p class="duties__title-a">Application for naturalization</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
@@ -199,39 +198,34 @@
             <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
             </div>
         </div>
-        <div class="side-scroll-item duties__item">
+        <div class="side-scroll__item duties__item">
             <p class="duties__title-a">Short stay</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
-            <div class="duties__item-title">短期滞在（親族訪問等）</div>
+            <div class="duties__item-title">短期滞在<br>（親族訪問等）</div>
             <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
             </div>
         </div>
-        <div class="side-scroll-item duties__item">
-            <p class="duties__title-a">Support for<br> Cooperative Establishment</p>
+        <div class="side-scroll__item duties__item">
+            <p class="duties__title-a">Support for Cooperative Establishment</p>
             <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
-            <div class="duties__item-title">協同組合設立サポート</div>
+            <div class="duties__item-title">協同組合設立<br>サポート</div>
             <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
             </div>
         </div>
-        <div class="side-scroll-item duties__item">
-            <p class="duties__title-a">Support for Establishment<br> of Japanese Language Schools</p>
+        <div class="side-scroll__item duties__item">
+            <p class="duties__title-a">Support for Establishment of Japanese Language Schools</p>
                 <div class="duties__item-img"><img src="img/00000616_ea929f.png" alt=""></div>
             <div class="duties__text">
-            <div class="duties__item-title">日本語学校設立サポート</div>
+            <div class="duties__item-title">日本語学校設立<br>サポート</div>
             <div class="duties__item-contents">業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。業務内容詳細入ります。</div>
             </div>
         </div>
-        </div><!--side-scroll-list duties__items-->
-
-      </div><!--side-scroll-list-wrapper-->
-    </div><!--duties-->
-  </div><!--side-scroll-container container-->
-</section>
-
-
-
+        </div><!--side-scroll__itemInner"-->
+      </div><!--side-scroll__itemOuter-->
+    </div><!--common__container-->
+  </section>
 
 
 
@@ -486,7 +480,9 @@
 
 
 
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>-->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
 <script src="/js/script.js"></script>
 
 </body>
